--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -18,7 +18,10 @@
       <form method="post" action="/users/create-user">
         <div class="container">
           <div class="row">
-            <div class="mb-3 mt-3 col-6">
+            <div class="mt-3">
+              <h3>Create a New User:</h3>
+            </div>
+            <div class="mb-3 col-6">
               <label for="email" class="form-label">Email address</label>
               <input
                 type="email"
