--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -14,10 +14,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
-    <div class="user-infor-container">
-      <form method="post" action="/users/create-user">
-        <div class="container">
-          <div class="row">
+    <div class="container">
+      <div class="row">
+        <div class="user-infor-container">
+          <form method="post" action="/users/create-user">
             <div class="mt-3">
               <h3>Create a New User:</h3>
             </div>
@@ -56,9 +56,35 @@
             <div class="col-12">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
-          </div>
+          </form>
         </div>
-      </form>
+        <div class="table-users mt-3">
+          <h3>Table users:</h3>
+          <table class="table table-hover table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Email</th>
+                <th scope="col">Username</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% userList.forEach(function(item,index){ %>
+              <tr>
+                <th scope="row"><%= index +1 %></th>
+                <td><%=item.email %></td>
+                <td><%=item.username %></td>
+                <td>
+                  <button class="btn btn-warning">Edit</button>
+                  <button class="btn btn-danger">Delete</button>
+                </td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </body>
 </html>
