--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -77,7 +77,13 @@
                 <td><%=item.username %></td>
                 <td>
                   <button class="btn btn-warning">Edit</button>
-                  <button class="btn btn-danger">Delete</button>
+                  <form
+                    style="display: inline"
+                    action="/delete-user/<%=item.id %>"
+                    method="POST"
+                  >
+                    <button class="btn btn-danger" type="submit">Delete</button>
+                  </form>
                 </td>
               </tr>
               <% }) %>
