--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -63,7 +63,7 @@
           <table class="table table-hover table-bordered">
             <thead>
               <tr>
-                <th scope="col">#</th>
+                <th scope="col">ID</th>
                 <th scope="col">Email</th>
                 <th scope="col">Username</th>
                 <th>Actions</th>
@@ -72,7 +72,7 @@
             <tbody>
               <% userList.forEach(function(item,index){ %>
               <tr>
-                <th scope="row"><%= index +1 %></th>
+                <th scope="row"><%=item.id %></th>
                 <td><%=item.email %></td>
                 <td><%=item.username %></td>
                 <td>
